integrate with framer motion

--- a/src/sass/components/_order-card.scss
+++ b/src/sass/components/_order-card.scss
@@ -42,8 +42,12 @@
   &:hover {
     background: var(--dark-trans);
 
-    .cell-prop-name + span {
+    .cell-prop-name {
       color: #003375;
+
+      + span {
+        color: #003375;
+      }
     }
   }
 
