--- a/src/sass/components/form/_app-form.scss
+++ b/src/sass/components/form/_app-form.scss
@@ -146,43 +146,33 @@ input {
   &:not(:has([type="color"])) > * {
     width: 100%;
   }
-
-  &[data-type="button"] {
-    @include flex;
-    height: 32px;
-
-    > * {
-      height: 100%;
-    }
-
-    input {
-      border-radius: var(--radius) 0 0 var(--radius);
-      border-right: 0;
-    }
-
-    button {
-      width: 35px;
-      display: grid;
-      place-content: center;
-
-      border: {
-        radius: 0 var(--radius) var(--radius) 0;
-      }
-
-      svg {
-        font-size: 20px;
-      }
-    }
-  }
 }
 
-.error-div {
-  position: absolute;
-  color: var(--danger);
-  transition: 0.3s;
-  z-index: -1;
+.password-input-holder {
+  @include flex;
+  height: 32px;
 
-  &.active {
-    translate: 0 !important;
+  > * {
+    height: 100%;
+  }
+
+  input {
+    border-radius: var(--radius) 0 0 var(--radius);
+    border-right: 0;
+    flex: 1;
+  }
+
+  button {
+    width: 35px;
+    display: grid;
+    place-content: center;
+
+    border: {
+      radius: 0 var(--radius) var(--radius) 0;
+    }
+
+    svg {
+      font-size: 20px;
+    }
   }
 }
