--- a/src/sass/components/spinners/_spinner.scss
+++ b/src/sass/components/spinners/_spinner.scss
@@ -1,13 +1,43 @@
-.spinner-pseudo-before,
-.spinner-pseudo-after,
-.spinner-el {
-  --clr: #fff;
-  --brdr-width: 4px;
+.empty-spinner {
+  --clr: var(--dark);
+  --diminsions: 35px;
+  --brdr-width: 2px;
+  width: var(--diminsions);
+  height: var(--diminsions);
+  border-radius: 50%;
+  border: var(--brdr-width) solid;
+  border-color: var(--clr) transparent;
 }
 
-.spinner-el.empty-spinner {
-  width: var(--diminsions);
-  max-width: var(--diminsions);
+.spinner-holder {
+  position: relative;
+  width: fit-content;
+  color: var(--dark);
+  font-weight: bold;
+  text-align: center;
+}
+
+%spinner-circles {
+  position: absolute;
+  width: 90%;
+  max-width: 90%;
+  top: 50%;
+  left: 50%;
+  translate: -50% -50%;
+  aspect-ratio: 1;
+  border-radius: 50%;
+}
+
+.spinner {
+  @extend %spinner-circles;
+  border: 4px solid;
+  border-color: var(--dark) transparent;
+}
+
+.spinner-transparent-circle {
+  @extend %spinner-circles;
+  background: var(--trans);
+  z-index: -1;
 }
 
 .spinner-full-width-holder {
@@ -15,116 +45,4 @@
   width: 100%;
   display: grid;
   place-content: center;
-}
-
-.spinner-el {
-  position: relative;
-  display: grid;
-  place-content: center;
-  font-size: calc(12px + 1vw);
-
-  @media (max-width: 296px) {
-    font-size: 3.7vw;
-  }
-
-  width: max-content;
-  aspect-ratio: 1 / 1;
-  text-align: center;
-
-  margin: 20px 10px;
-
-  &:not(.empty-spinner) {
-    padding: 30px;
-  }
-
-  &::after {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    top: 50%;
-    left: 50%;
-    translate: -50% -50%;
-  }
-}
-
-.spinner-pseudo-before,
-.spinner-pseudo-after,
-.spinner-el.empty-spinner {
-  --diminsions: 14px;
-}
-
-.spinner-pseudo-before,
-.spinner-pseudo-after {
-  $jc: flex-start;
-
-  &.center {
-    $jc: center;
-  }
-
-  @include flex($jc, center);
-
-  &:not(.center) {
-    width: fit-content;
-  }
-}
-
-.spinner-pseudo-before::before,
-.spinner-pseudo-after::after {
-  width: var(--diminsions);
-  height: var(--diminsions);
-}
-
-.spinner-pseudo-before::before,
-.spinner-pseudo-after::after,
-.spinner-el::after {
-  content: "";
-  display: inline-block;
-  border-radius: 50%;
-  animation: var(--rotate-circle);
-  border: var(--brdr-width) solid transparent {
-    top-color: var(--clr);
-  }
-}
-
-.spinner-el.main-spinner {
-  margin: auto;
-}
-
-.spinner-pseudo-before::before {
-  margin-right: 10px;
-}
-.spinner-pseudo-after::after {
-  margin-left: 10px;
-}
-
-$pseudo: ("", "before", "after");
-
-@each $ps in $pseudo {
-  #{if($ps == "", ".spinner-el" ,".spinner-pseudo-") + $ps} {
-    $ps-el: if($ps == "", "::after", #{"::" + $ps});
-
-    &.fade#{$ps-el},
-    &.scale#{$ps-el} {
-      transition: 0.3s;
-    }
-
-    &.fade {
-      &#{$ps-el} {
-        opacity: 0;
-      }
-
-      &.active#{$ps-el} {
-        opacity: 1;
-      }
-    }
-
-    &.scale {
-      &#{$ps-el} {
-        scale: 0;
-      }
-      &.active#{$ps-el} {
-        scale: 1;
-      }
-    }
-  }
 }
