--- a/src/sass/pages/homePage/_home-page-products-slider.scss
+++ b/src/sass/pages/homePage/_home-page-products-slider.scss
@@ -1,17 +1,13 @@
 .home-page-products-slider {
-  @include flex(center, center, 10px);
-  height: 400px;
+  @include flex(center, center, 10px, column);
   border-radius: 10px;
-  box-shadow: inset -1px 0px 30px 10px #0756bd57;
+  box-shadow: inset -1px 0px 30px 10px #0756bd23;
 
   background: linear-gradient(to right, var(--trans), transparent);
 
-  @media (max-width: 767px) {
-    flex-direction: column;
-    height: 470px;
-  }
-  @media (max-width: 330px) {
-    height: 550px;
+  &-loading {
+    @include flex(center, center, 10px);
+    margin-block: 20px;
   }
 
   + * {
@@ -34,11 +30,11 @@
     max-width: 100%;
     width: 100%;
     height: 100%;
-    padding-bottom: 16px;
+    padding-bottom: 30px;
     flex: 1;
 
     &-wrapper {
-      padding: 10px 0;
+      padding: 18px 0 0;
     }
   }
 
@@ -51,10 +47,14 @@
     }
     .product-card-btns-holder {
       margin-top: auto;
+      flex-direction: column;
+      > * {
+        width: 100%;
+      }
     }
   }
 
-  // explore more card "final card"
+  // explore more card => "final card"
   &-explore-more-card {
     height: auto;
 
