solve brands and categories form page bugs

--- a/src/sass/components/_category-or-brand-card.scss
+++ b/src/sass/components/_category-or-brand-card.scss
@@ -30,6 +30,10 @@
     object-fit: contain;
     margin-top: auto;
     transition: 0.3s;
+
+    ~ div > * + * {
+      margin-top: 10px;
+    }
   }
 
   // for dashboard card
