--- a/src/sass/pages/_categories-and-brands-page.scss
+++ b/src/sass/pages/_categories-and-brands-page.scss
@@ -1,7 +1,17 @@
 .categories-or-brands-list {
-  display: flex;
-  flex-wrap: wrap;
   gap: 20px;
+
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(175px, 1fr));
+  justify-content: center;
+
+  > li button {
+    width: 100%;
+  }
+
+  @media (max-width: 200px) {
+    grid-template-columns: 0.9fr;
+  }
 }
 
 .category-or-brand-no-data-holder {
