--- a/src/sass/global/_classes.scss
+++ b/src/sass/global/_classes.scss
@@ -139,9 +139,12 @@ strong.prop-cell-name {
     flex: 1;
     min-width: fit-content;
     max-width: 100%;
-    overflow: hidden;
-    -webkit-line-clamp: 2;
-    -webkit-box-orient: vertical;
+
+    &:not(.product-card-qty) {
+      -webkit-line-clamp: 2;
+      -webkit-box-orient: vertical;
+      overflow: hidden;
+    }
   }
 }
 
