--- a/src/sass/main.css
+++ b/src/sass/main.css
@@ -1072,7 +1072,7 @@ form#auth-form {
 .product-imgs-area input#imgs[type=file] {
   display: none;
 }
-.product-imgs-area label {
+.product-imgs-area label[for=imgs] {
   display: grid;
   place-content: center;
   align-self: stretch;
@@ -1080,18 +1080,18 @@ form#auth-form {
   padding: 10px;
   font-size: 40px;
 }
-.product-imgs-area label:not([data-disabled=true]) {
+.product-imgs-area label[for=imgs]:not([data-disabled=true]) {
   background: var(--dark-trans);
   color: #fff;
   cursor: pointer;
 }
-.product-imgs-area label:not([data-disabled=true]):hover {
+.product-imgs-area label[for=imgs]:not([data-disabled=true]):hover {
   background: var(--main);
 }
-.product-imgs-area label[data-disabled=true] {
+.product-imgs-area label[for=imgs][data-disabled=true] {
   background: rgb(207, 207, 207);
 }
-.product-imgs-area label[data-disabled=true]:hover {
+.product-imgs-area label[for=imgs][data-disabled=true]:hover {
   color: #fff;
   background: rgb(156, 156, 156);
 }
@@ -1113,24 +1113,35 @@ form#auth-form {
   isolation: isolate;
   opacity: 0;
   scale: 0.7;
-  transition: 0.3s;
+  transition: 0.2s;
 }
 .product-imgs-area .img-preview-cell:hover::after {
   opacity: 1;
   scale: 1;
 }
-.product-imgs-area .img-preview-cell button {
+.product-imgs-area .img-preview-cell-btns-holder {
   z-index: 3;
-  left: 50%;
-  top: 50%;
-  translate: -50% -50%;
+  inset: 0;
   position: absolute;
   opacity: 0;
   scale: 0.7;
   pointer-events: none;
   transition-delay: 100ms;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  justify-content: center;
+  padding: 5px;
+  transition: 0.37s;
 }
-.product-imgs-area .img-preview-cell:hover button {
+.product-imgs-area .img-preview-cell-btns-holder button {
+  display: grid;
+  place-content: center;
+}
+.product-imgs-area .img-preview-cell-btns-holder button svg {
+  font-size: 24px;
+}
+.product-imgs-area .img-preview-cell:hover .img-preview-cell-btns-holder {
   opacity: 1;
   scale: 1;
   pointer-events: initial;
