refactor: separate cart page & solve ts problems in test files for production

--- a/src/sass/main.css
+++ b/src/sass/main.css
@@ -1431,7 +1431,42 @@ form#auth-form {
   text-align: center;
 }
 
-.cart-or-wishlist-btns {
+#clear-wishlist-btn, .cart-btns > * {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+}
+#clear-wishlist-btn svg, .cart-btns > * svg {
+  font-size: 20px;
+}
+
+.cart-and-wishlist-down-holder {
+  display: flex;
+  flex-direction: column;
+  margin-top: auto;
+  padding-top: 30px;
+  position: relative;
+  background: white;
+}
+.cart-and-wishlist-down-holder::after {
+  content: "";
+  position: absolute;
+  top: 20px;
+  left: 0;
+  width: 100%;
+  height: 1px;
+  background: var(--main);
+}
+
+.cart-and-wishlist-pages-holder {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+
+.cart-btns {
   display: flex;
   flex: 1;
   align-items: flex-end;
@@ -1440,43 +1475,19 @@ form#auth-form {
   min-width: fit-content;
   flex-wrap: wrap;
 }
-.cart-or-wishlist-btns > * {
+.cart-btns > * {
   flex: 1;
   min-width: -moz-fit-content;
   min-width: fit-content;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  gap: 10px;
-}
-.cart-or-wishlist-btns > * svg {
-  font-size: 20px;
 }
 @media (max-width: 275px) {
-  .cart-or-wishlist-btns {
+  .cart-btns {
     justify-content: flex-end;
   }
-  .cart-or-wishlist-btns > * {
+  .cart-btns > * {
     width: 100%;
     flex: unset;
   }
-}
-
-#wishlist-page-holder {
-  height: 100%;
-  display: flex;
-  flex-direction: column;
-  gap: 20px;
-}
-
-#wishlist-btn-holder button {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  gap: 10px;
-}
-#wishlist-btn-holder button svg {
-  font-size: 20px;
 }
 
 .success-or-fail-icon {
@@ -1894,24 +1905,6 @@ form#auth-form {
 .app-footer-white-logo {
   width: 40px;
   display: grid;
-}
-
-.cart-and-wishlist-down-holder {
-  display: flex;
-  flex-direction: column;
-  margin-top: auto;
-  padding-top: 30px;
-  position: relative;
-  background: white;
-}
-.cart-and-wishlist-down-holder::after {
-  content: "";
-  position: absolute;
-  top: 20px;
-  left: 0;
-  width: 100%;
-  height: 1px;
-  background: var(--main);
 }
 
 .category-or-brand-card {
