--- a/src/sass/pages/_wishlist-page.scss
+++ b/src/sass/pages/_wishlist-page.scss
@@ -1,16 +1,3 @@
-#wishlist-page-holder {
-  height: 100%;
-  display: flex;
-  flex-direction: column;
-  gap: 20px;
-}
-
-#wishlist-btn-holder {
-  button {
-    @include flex(center, center, 10px);
-
-    svg {
-      font-size: 20px;
-    }
-  }
+#clear-wishlist-btn {
+  @extend %cart-and-wishlist-pages-down-btns-common-styles;
 }
