--- a/src/sass/main.css
+++ b/src/sass/main.css
@@ -1466,6 +1466,16 @@ form#auth-form {
   gap: 20px;
 }
 
+.update-cart-loading-holder {
+  display: flex;
+  gap: 10px;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
+  z-index: -1;
+  color: var(--dark);
+}
+
 .cart-btns {
   display: flex;
   flex: 1;
