--- a/src/sass/pages/_cart-page.scss
+++ b/src/sass/pages/_cart-page.scss
@@ -1,3 +1,13 @@
+.update-cart-loading-holder {
+  display: flex;
+  gap: 10px;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
+  z-index: -1;
+  color: var(--dark);
+}
+
 .cart-btns {
   display: flex;
   flex: 1;
